Added localized title to intro page.

--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -1,3 +1,4 @@
 {
-  "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and RequireJS.": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and RequireJS."
+  "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and RequireJS.": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and RequireJS.",
+  "Intro": "Intro"
 }
