--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -1,4 +1,5 @@
 {
   "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and Babel (through spire-of-babel).": "This repo is a starter kit for working with Node.js, Handlebars (both server and client side), SASS (through node-sass), and Babel (through spire-of-babel).",
-  "Intro": "Intro"
+  "Intro": "Intro",
+  "Node.js Starter Kit": "Node.js Starter Kit"
 }
